[package]
name = "hex_field_playground"
version = "0.1.0"
authors = ["f3kilo <f3kilo@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.0"
ash = "0.30.0"
log = "0.4.8"
slog = "2.5.2"
sloggers = "0.3.5"
tinyfiledialogs = "3.3.9"
settings_path = "0.1.0"